--- a/public/index.html
+++ b/public/index.html
@@ -143,10 +143,13 @@ const display = document.getElementById("display");
 
 //Items in correct order
 const list = [
-  "Download .exe file and Pull Secret",
-  "Add OpenShift to $Path",
-  "Type \"crc setup in Command Prompt\"",
-  "Type \"crc start\"",
+  "Download Minishift and Virtual Box",
+  "Add Minishift to Path",
+  "Type \"minishift start --vm-driver virtualbox\"",
+  "Go to console",
+  "Create Project",
+  "Create app using nodejs from Catalog and github repo",
+  "View url after build complete!"
  
 ];
 
